Narrow website until tab is closed
We can use the activeTab permission fully, and continue narrowing the website
even while the user navigates to other pages on the same domain.

--- a/src_chrome/manifest.json
+++ b/src_chrome/manifest.json
@@ -18,8 +18,14 @@
         "default_popup": "popup.html"
     },
 
+    "background": {
+        "service_worker": "service_worker.js",
+        "type": "module"
+    },
+
     "permissions": [
         "activeTab",
-        "scripting"
+        "scripting",
+        "storage"
     ]
 }
